--- a/stream_title_generator.html
+++ b/stream_title_generator.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>TITLES</title>
-        <script>
+        <script type="text/javascript">
 let WEEKDAYS = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
 let PARAMS = new URLSearchParams(location.href.split("?").pop());
 console.log(PARAMS.entries())
