--- a/stream_title_generator.html
+++ b/stream_title_generator.html
@@ -112,6 +112,7 @@ function copy_link(obj){
     for (var t in titles){
         PARAMS.set(t, titles[t]);
     }
+    PARAMS.delete("editor");
     var new_url = `${location.href.slice(location.search)}?${PARAMS.toString()}`;
     var temp_span = document.createElement("span");
     temp_span.innerText = new_url;
