--- a/stream_title_generator.html
+++ b/stream_title_generator.html
@@ -93,7 +93,7 @@ function save(reload=true){
 }
 
 function edit(){
-    PARAMS.append("editor","");
+    PARAMS.append("editor","true");
     location.search = `?${PARAMS.toString()}`
 }
 
